# NiceHashQtMiner

./: .gitignore  CMakeLists.txt  OnGPUsLost.sh  README.md  resources.qrc
NiceHashQtMiner/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  Enums.cpp  Enums.h  Eula.cpp  Eula.h  ExchangeRateAPI.cpp  ExchangeRateAPI.h  Globals.cpp  Globals.h  IFTTT.cpp  IFTTT.h  International.cpp  International.h  main.cpp
NiceHashQtMiner/Algorithms/: Algorithm.cpp  Algorithm.h  DualAlgorithm.cpp  DualAlgorithm.h
NiceHashQtMiner/Benchmarking/: BenchmarkHandler.cpp  BenchmarkHandler.h
NiceHashQtMiner/Benchmarking/BenchHelpers/: ClaymoreZcashBenchHelper.cpp  ClaymoreZcashBenchHelper.h  CpuBenchHelper.cpp  CpuBenchHelper.h  PowerHelper.cpp  PowerHelper.h
NiceHashQtMiner/Configs/: ConfigManager.cpp  ConfigManager.h
NiceHashQtMiner/Configs/ConfigJsonFile/: ConfigFile.cpp  ConfigFile.h  DeviceBenchmarkConfigFile.cpp  DeviceBenchmarkConfigFile.h  FOLDERS.cpp  FOLDERS.h  GeneralConfigFile.cpp  GeneralConfigFile.h  MinerSystemVariablesConfigFile.cpp  MinerSystemVariablesConfigFile.h
NiceHashQtMiner/Configs/Data/: AlgorithmConfig.cpp  AlgorithmConfig.h  BenchmarkTimeLimitsConfig.cpp  BenchmarkTimeLimitsConfig.h  ComputeDeviceConfig.h  DeviceBenchmarkConfig.cpp  DeviceBenchmarkConfig.h  DeviceDetectionConfig.cpp  DeviceDetectionConfig.h  DualAlgorithmConfig.cpp  DualAlgorithmConfig.h  GeneralConfig.cpp  GeneralConfig.h  MinerSystemVariablesConfig.cpp  MinerSystemVariablesConfig.h
NiceHashQtMiner/Devices/: AmdGpuDevice.cpp  AmdGpuDevice.h  CPUUtils.cpp  CPUUtils.h  CUDA_Unsupported.cpp  CUDA_Unsupported.h  ComputeDeviceManager.cpp  ComputeDeviceManager.h  CudaDevice.cpp  CudaDevice.h  GroupAlgorithms.cpp  GroupAlgorithms.h  GroupNames.cpp  GroupNames.h  OpenCLDevice.h
NiceHashQtMiner/Devices/Algorithms/: DefaultAlgorithms.cpp  DefaultAlgorithms.h  GroupAlgorithms.cpp  GroupAlgorithms.h
NiceHashQtMiner/Devices/ComputeDevice/: AmdComputeDevice.cpp  AmdComputeDevice.h  CPUComputeDevice.cpp  ComputeDevice.cpp  ComputeDevice.h  CpuComputeDevice.cpp  CpuComputeDevice.h  CudaComputeDevice.cpp  CudaComputeDevice.h
NiceHashQtMiner/Devices/Querying/: AmdQuery.cpp  AmdQuery.h  OpenCLJsonData.h  VideoControllerData.h
NiceHashQtMiner/Forms/: DriverVersionConfirmationDialog.cpp  DriverVersionConfirmationDialog.h  Form_3rdParty_TOS.cpp  Form_3rdParty_TOS.h  Form_Benchmark.cpp  Form_Benchmark.h  Form_ChooseLanguage.cpp  Form_ChooseLanguage.h  Form_DcriValues.cpp  Form_DcriValues.h  Form_Loading.cpp  Form_Loading.h  Form_Main.cpp  Form_Main.h  Form_Settings.cpp  Form_Settings.h
NiceHashQtMiner/Forms/Components/: AlgorithmSettingsControl.cpp  AlgorithmSettingsControl.h  AlgorithmsListView.cpp  AlgorithmsListView.h  AlgorithmsListViewModel.cpp  AlgorithmsListViewModel.h  BenchmarkLimitControl.cpp  BenchmarkLimitControl.h  BenchmarkOptions.cpp  BenchmarkOptions.h  DevicesListViewEnableControl.cpp  DevicesListViewEnableControl.h  DevicesListViewEnableControlModel.cpp  DevicesListViewEnableControlModel.h  Field.cpp  Field.h  GroupProfitControl.cpp  GroupProfitControl.h  IntensitiesModel.cpp  IntensitiesModel.h
NiceHashQtMiner/Interfaces/: IBenchmarkCalculation.h  IBenchmarkComunicator.h  IBenchmarkForm.h  IListItemCheckColorSetter.h  IMainFormRatesComunication.h  IMessageNotifier.h  IMinerUpdateIndicator.h
NiceHashQtMiner/Miners/: Ccminer.cpp  Ccminer.h  ClaymoreBaseMiner.cpp  ClaymoreBaseMiner.h  ClaymoreCryptoNightMiner.cpp  ClaymoreCryptoNightMiner.h  ClaymoreDual.cpp  ClaymoreDual.h  CpuMiner.cpp  CpuMiner.h  Ethlargement.cpp  Ethlargement.h  Ewbf.cpp  Ewbf.h  Excavator.cpp  Excavator.h  Miner.cpp  Miner.h  MinerFactory.cpp  MinerFactory.h  MinersApiPortsManager.cpp  MinersApiPortsManager.h  MinersManager.cpp  MinersManager.h  MinersSettingsManager.cpp  MinersSettingsManager.h  MiningSession.cpp  MiningSession.h  Prospector.cpp  Prospector.h  Sgminer.cpp  Sgminer.h  Xmrig.cpp  Xmrig.h
NiceHashQtMiner/Miners/Equihash/: ClaymoreZcashMiner.cpp  ClaymoreZcashMiner.h  Dtsm.cpp  Dtsm.h  Ewbf.cpp  Ewbf.h  Ewbf144.cpp  Ewbf144.h  NhEqBase.cpp  NhEqBase.h  NhEqMiner.cpp  NhEqMiner.h  OptiminerZcashMiner.cpp  OptiminerZcashMiner.h
NiceHashQtMiner/Miners/Grouping/: GroupMiner.cpp  GroupMiner.h  GroupSetupUtils.cpp  GroupSetupUtils.h  GroupingLogic.cpp  GroupingLogic.h  MinerPaths.cpp  MinerPaths.h  MiningDevice.cpp  MiningDevice.h  MiningPair.cpp  MiningPair.h  MiningSetup.cpp  MiningSetup.h
NiceHashQtMiner/Miners/Parsing/: ExtraLaunchParameters.cpp  (+7 more)
NiceHashQtMiner/PInvoke/: CPUID.cpp  CPUID.h  NiceHashProcess.cpp  NiceHashProcess.h  PInvokeHelpers.cpp  PInvokeHelpers.h
NiceHashQtMiner/Properties/: Resources.cpp  Resources.h
NiceHashQtMiner/Qt/: ClickableLabel.cpp  ClickableLabel.h  LException.cpp  LException.h  NHMCashRegisterBitcoin.cpp  NHMCashRegisterBitcoin.h
NiceHashQtMiner/Stats/: ExchangeRateAPI.cpp  ExchangeRateAPI.h  NiceHashSocket.cpp  NiceHashSocket.h  NiceHashStats.cpp  NiceHashStats.h
NiceHashQtMiner/Switching/: AlgorithmHistory.cpp  AlgorithmHistory.h  AlgorithmSwitchingManager.cpp  AlgorithmSwitchingManager.h  Interval.cpp  Interval.h  Models.h  NHSmaData.cpp  NHSmaData.h
NiceHashQtMiner/Utils/: AlgorithmNiceHashNames.cpp  AlgorithmNiceHashNames.h  BINS_CODEGEN.h  BINS_CODEGEN_3rd.h  BitcoinAddress.cpp  BitcoinAddress.h  CommandLineParser.cpp  CommandLineParser.h  DownloadSetup.cpp  DownloadSetup.h  Extensions.cpp  Extensions.h  Helpers.cpp  Helpers.h  Links.cpp  Links.h  Logger.cpp  Logger.h  MinersDownloadManager.h  MinersDownloader.cpp  MinersDownloader.h  MinersExistanceChecker.cpp  MinersExistanceChecker.h  ProfitabilityCalculator.cpp  ProfitabilityCalculator.h
NiceHashQtMiner/WinPort/: Process.cpp  Process.h
NiceHashQtMiner/langs/: bg.lang  en.lang  es.lang  it.lang  pl.lang  pt.lang  ro.lang  ru.lang  zh_cn.lang
tools/AMDOpenCLDeviceDetection/: AMDOpenCLDeviceDetection.cpp  AMDOpenCLDeviceDetection.h  CMakeLists.txt  OpenCLDevice.h  main.cpp
tools/CudaDeviceDetection/: CMakeLists.txt  CudaDetection.cpp  CudaDetection.h  CudaDevice.h  cuda_nvml_helper.h  main.cpp
(+43 files in other folders)
